worked on spacing issues around trending and announcements

--- a/style.css
+++ b/style.css
@@ -7,14 +7,10 @@
 
 body {
   display: grid;
-  gap: 0;
-  height: 100%;
-  margin: 0;
-  border-radius: 0;
   background-color: var(--bg-gray);
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(6 , 1fr);
   overflow: scroll;
+  background-color: #cdd2da;
 }
 
 
@@ -89,7 +85,6 @@ header input {
   grid-area: logo;
 }
 
-
 .header-right{
   position: relative;
   right: -6rem;
@@ -131,11 +126,17 @@ header input {
   margin-left: 2rem;
   grid-area:  2 / 3 / 6 / 5;
   display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 100px;
+  position: relative;
+  margin-top: 1rem;
+  background-color: #cdd2da;
 }
 
 .center-box * > h1 {
   grid-column: 1 / 3;
-  font-weight: 800;
+  margin-bottom: 0;
+  margin-top: 2rem;
 }
 
 .center-box * > .card {
@@ -147,12 +148,6 @@ header input {
 .center-box .project-holder, .right-holder {
   display: grid;
   gap: 2rem;
-}
-
-.project-holder {
-  grid-template-rows: 4rem 1fr;
-  grid-template-columns: 1fr 1fr;
-  grid-column: 1 / 4;
 }
 
 .project-holder .card {
@@ -169,20 +164,18 @@ header input {
 
 .right-holder{
   margin-left: 2rem;
-  grid-column: 4 / 9;
+  grid-column: 4 / 5;
 }
 
 .right-holder #trending, .right-holder #announcements {
+  margin-top: -1.8rem;
   padding: 20px;
   box-sizing: border-box;
+  min-width: 18rem;
+  align-items: center;
 }
 
-.right-holder #trending {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-
-}
-
+  
 .right-holder #announcements span{
   display: block;
   font-size: small;
@@ -203,13 +196,30 @@ header input {
   color: #cdd2da;
 }
 
-.right-holder #trending, .right-holder h1.trending {
-  grid-row: 3 / 6;
+.right-holder h1 {
+  margin: 0;
 }
 
+
 #trending .trend-link {
+  grid-column: 1 / span 2;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 1rem;
-  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1rem 1rem 1rem 1rem ;
+  row-gap: .5rem;
 }
+
+.trend-link img {
+  grid-column: 1 / 2;
+  grid-row: 1 / span 2;
+  width: 100%;
+  height: 100%;
+}
+
+.trend-link span, .trend-link h4{
+  grid-column: 2/ 5;
+  padding-left: 20px;
+  display: grid;
+  align-content: center;
+}
+
